# open_glow

./: .gitignore  CLAUDE.md  README.md
docs/: BUG_LOG.md  IMPLEMENTATION_PLAN.md  SETUP_GUIDE.md
firmware/: sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  battery_monitor.c  battery_monitor.h  ble_service.c  ble_service.h  button_handler.c  button_handler.h  debug_log.h  device_fsm.c  device_fsm.h  ems_controller.c  ems_controller.h  event_queue.c  event_queue.h  led_controller.c  led_controller.h  main.c  openglow_config.h  safety_manager.c  safety_manager.h  session_log.c  session_log.h  skin_contact.c  skin_contact.h  vibration_controller.c  vibration_controller.h
firmware/main/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h  hal_nvs.c  hal_nvs.h  hal_pwm.c  hal_pwm.h  hal_timer.c  hal_timer.h
