idf_component_register(SRCS "main.c"
                            "event_queue.c"
                            "button_handler.c"
                            "device_fsm.c"
                            "ems_controller.c"
                            "led_controller.c"
                            "vibration_controller.c"
                            "skin_contact.c"
                            "battery_monitor.c"
                            "safety_manager.c"
                            "ble_service.c"
                            "hal/hal_gpio.c"
                            "hal/hal_adc.c"
                            "hal/hal_pwm.c"
                            "hal/hal_timer.c"
                            "hal/hal_nvs.c"
                    INCLUDE_DIRS "." "hal")
